--- a/Videojuego/html/build.gradle
+++ b/Videojuego/html/build.gradle
@@ -20,8 +20,8 @@ gwt {
 
   // Needs to be in front of "modules" below.
   src = files(file('src/main/java'), project(":core").file('src/main/java'))
-  modules += ["io.github.JuegoSnake.GdxDefinition"]
-  devModules += ["io.github.JuegoSnake.GdxDefinitionSuperdev"]
+  modules += ["com.politecnicomalaga.snake.GdxDefinition"]
+  devModules += ["com.politecnicomalaga.snake.GdxDefinitionSuperdev"]
   project.webAppDirName = "webapp"
 
   compiler.strict = true
@@ -33,11 +33,14 @@ gwt {
 }
 
 dependencies {
+  implementation "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion:sources"
+  implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
   implementation "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
   implementation "com.github.tommyettinger:gdx-backend-gwt:1.1210.1"
   implementation "com.github.tommyettinger:gdx-backend-gwt:1.1210.1:sources"
   implementation "com.google.jsinterop:jsinterop-annotations:2.0.2:sources"
   implementation project(':core')
+  implementation("com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources") {exclude group: "com.google.gwt", module: "gwt-user"}
 
 }
 
